[package]
name = "cf-img"
version = "0.1.0"
edition = "2021"
authors = [ "caitao <39289808+ddouweb@users.noreply.github.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.2.0", features=['http','d1'] }
worker-macros = { version="0.2.0", features=['http'] }
console_error_panic_hook = { version = "0.1.1" }
http = "1.1"
#reqwest = { version = "0.11", features = ["json"] }

[profile.release]
lto = true
strip = true
codegen-units = 1